Version 2.3.0 - The river knows.
----------
2008-??-??

	GonoszTopi:
		* Various fixes to new colour code
		* Allow user to select display of transfer rates
		* Extendable list-control settings save/load code
		* Implemented an alternate method to estimate the real user count
		  in the Kad network, which is not based on our local routing table.

	Greek:
		* Part number is now an extra column in the download list
		* Improvements to preferences dialogs
		* Redesign skin selection

	Kry:
		* Fix indexes after removing GUI items
		* Resolve MSVC compilation problem with separate strings in GUI
		* Fixes to Windows build
		* Allow compilation with wxCocoa
		* Replace Color.h by new class implementation MuleColour
		* Lower class overhead and use two-level cache for pens/brushes
		* Added aMuleCMD project for MSVC.
		* Fixed UnitTests and aMuleCMD in MSVC to use _CONSOLE subsystem.
		* Preferences changes

	lfroen:
		* php prefix for lex/yacc

	morph:
		* Patch to uniform and fix minor errors on man pages

	myth:
		* Feedback from shared files - add number of clients on queue.

	Stu Redman:
		* Sort source list on opening and add file name to A4AF files
		* Adjust displayed download rates for files and sources 
		  so that the sum matches the total download rate.
		* MSVC: optional GeoIP support
		* Faster progress bars with less overhead (without pens/brushes)
		* Show log messages in remote gui

	Vollstrecker:
		* Unify copyright lines
		* Fixed clean and distclean targets for make
		* Various Updates in debian/ see debian/changelog
		* Added crash handling in command-line tools

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log
		* Add option to specify amuleweb binary location
		* Fix amuleweb progress bar display for files > 4GB

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.
