@@ -5,3 +5,4 @@ Icon=amule
 Terminal=false
 Type=Application
 Categories=Network;P2P;
+Comment=A client for the eD2k network
