@@ -4045,21 +4045,7 @@ uint32 CPartFile::GetDlActiveTime() const
 	return nDlActiveTime;
 }
 
-#ifdef CLIENT_GUI
-
-// remote Gui has no adjustment factor transferred yet, so use raw rate
-float CPartFile::GetKBpsDown() const
-{ 
-	return kBpsDown; 
-}
-
-#else
-
-float CPartFile::GetKBpsDown() const
-{ 
-	return kBpsDown * theStats::GetDownloadRateAdjust(); 
-}
-
+#ifndef CLIENT_GUI
 
 uint8 CPartFile::GetStatus(bool ignorepause) const
 {
