@@ -146,10 +146,7 @@ public:
 	const CPath& GetPartMetFileName() const { return m_partmetfilename; }
 	uint64	GetTransferred() const		{ return transferred; }
 	const CPath& GetFullName() const	{ return m_fullname; }
-	// download rate adjusted to total transfer rate
-	float	GetKBpsDown() const;
-	// raw measured download rate
-	float	GetRawKBpsDown() const		{ return kBpsDown; }
+	float	GetKBpsDown() const			{ return kBpsDown; }
 	double	GetPercentCompleted() const	{ return percentcompleted; }
 
 #ifndef CLIENT_GUI
