@@ -326,7 +326,6 @@ class CStatistics {
 
 	// Other
 	static	void	CalculateRates();
-	static  float	GetDownloadRateAdjust()			{ return 1.0;/*s_downloadRateAdjust;*/ }
 
 	static	void	AddReceivedBytes(uint32 bytes)
 		{
@@ -430,7 +429,6 @@ class CStatistics {
 	static	CStatTreeItemCounter*		s_cryptDownOverhead;
 	static	CStatTreeItemNativeCounter*	s_foundSources;
 	static	CStatTreeItemNativeCounter*	s_activeDownloads;
-	static  float                       s_downloadRateAdjust;
 
 	// Connection
 	static	CStatTreeItemReconnects*	s_reconnects;
